# ltsiTK

./: README.md
plugins/drawingtools/: CMakeLists.txt
plugins/drawingtools/src/: drawingtoolsplugin.cpp  drawingtoolsplugin.h
plugins/exampleactionplugin/: CMakeLists.txt
plugins/exampleactionplugin/src/: ExampleAction.ui  ExampleActionPlugin.cpp  ExampleActionPlugin.h  MatToQImage.cpp  MatToQImage.h
plugins/imagesacquisition/: CMakeLists.txt
plugins/imagesacquisition/src/: CaptureThread.cpp  CaptureThread.h  Controller.cpp  Controller.h  ImageBuffer.cpp  ImageBuffer.h  ImagesAcquisition.ui  ImagesAcquisitionPlugin.cpp  ImagesAcquisitionPlugin.h  ProcessingThread.cpp  ProcessingThread.h
src/: CMakeLists.txt  CaptureManager.cpp  ImageConversion.cpp  ImagePlus.cpp  LiveViewDialog.ui  MainWindow.cpp  MainWindow.ui  PaintArea.cpp  ParametersToolbox.cpp  Settings.cpp  Util.cpp  interfaces.cpp  main.cpp
src/include/: CaptureManager.h  ImageConversion.h  ImagePlus.h  MainWindow.h  PaintArea.h  ParametersToolbox.h  Settings.h  Util.h  interfaces.h
